proj1 final changes

--- a/project1.html
+++ b/project1.html
@@ -22,13 +22,43 @@
     <section id="details">
         <div class="container">
             <h2>Project Details</h2>
+            <img src="A-Frame.jpg" alt="A-Frame Project Snapshot" style="width: 100%; max-width: 600px; display: block; margin: 20px auto; border: 2px solid #6d1b86; border-radius: 5px;">
             <p>
-                This project involves creating an immersive 3D scene using A-Frame, a powerful web framework for building 3D/VR experiences. It showcases my skills in 3D modeling and interactive design, blending creativity with technology.
+                This project transforms a 2D painting into an interactive 3D environment using A-Frame, a web framework for building virtual reality (VR) experiences directly in the browser. Inspired by the artwork of Piet Mondrian, a renowned artist famous for his abstract geometric compositions, the recreated scene captures the essence of his signature style while immersing users in a virtual world.
+            </p>
+            <p>
+                The final product demonstrates how artistic expression can evolve in the digital age, combining the elegance of classic art with the dynamic nature of 3D design. By leveraging modern web technologies, this project bridges the gap between traditional creativity and emerging digital tools.
+            </p>
+            <p>
+                <strong>Demo Link:</strong> <a href="https://noorh13.github.io/a-frame-lmc-project/" target="_blank">https://noorh13.github.io/a-frame-lmc-project/</a>
             </p>
         </div>
     </section>
 
-    
+    <section id="technologies">
+        <div class="container">
+            <h2>Technologies Used</h2>
+            <ul>
+                <li><strong>A-Frame</strong>: For creating and rendering the 3D environment.</li>
+                <li><strong>HTML</strong>: For structuring the 3D scene and elements.</li>
+                <li><strong>CSS</strong>: For styling the interface and enhancing the visual presentation.</li>
+                <li><strong>JavaScript</strong>: For adding interactivity and controlling 3D elements (if applicable).</li>
+                <li><strong>Generative AI (DALL-E)</strong>: Used to conceptualize elements or expand on artistic designs.</li>
+                <li><strong>GitHub</strong>: For version control and collaboration.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="artwork">
+        <div class="container">
+            <h2>Artwork</h2>
+            <p>
+                <strong>Artist:</strong> Piet Mondrian<br>
+                <strong>Painting Recreated:</strong> An abstract geometric composition from Mondrian's "De Stijl" movement, known for its simplicity and use of primary colors alongside black and white.
+            </p>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Renee Dhar. All rights reserved.</p>
